bug #46136. r:valeski, a:leaf. Reset mIP6vChecked as PR_FASLE to prevent browser from hunging for ftp protocol